Fixed Schemamanager to pull schema file from JAR resource